testsuite/tests/checks/uc_as_actuals/test.out
uc.adb:12:42: error: instance of Unchecked_Conversion
12 |    procedure Init (X : out T2; Y : T2 := UC (Var1)) is   --  FLAG
   |                                          ^^^^^^^^^ 

uc.adb:23:11: error: instance of Unchecked_Conversion
23 |    Ident (UC (Var1), Var2);                --  FLAG
   |           ^^^^^^^^^ 

